macro(use_cxx11)
	if (CMAKE_VERSION VERSION_LESS "3.1")
		if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
			set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
		endif ()
	else ()
			set (CMAKE_CXX_STANDARD 11)
	endif ()
endmacro(use_cxx11)
use_cxx11()
include_directories ("./") 
aux_source_directory(./port DIR_LIB_SRCS)
aux_source_directory(./helpers/memenv DIR_LIB_SRCS)
aux_source_directory(./table DIR_LIB_SRCS)
aux_source_directory(./util DIR_LIB_SRCS)
aux_source_directory(./db  DIR_LIB_SRCS)
add_library (leveld ${DIR_LIB_SRCS})
